fix subtitle color in dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -15,6 +15,10 @@
   color: #ffffff !important;
 }
 
+.dark .portrait-title > h3 {
+  color: rgba(255, 255, 255, 0.54) !important;
+}
+
 .dark .home-section-bg,
 .dark .page-footer,
 .article .dark,
